log/build_2025-04-24_21-55-16/cv_basics/stderr.log
  File "/home/yuhan/lab_2025/install/cv_basics/lib/python3.10/site-packages/cv_basics/inference_pytorch_background.py", line 100
    def
       ^
SyntaxError: invalid syntax

